2005-05-23  Roger While <simrw@sim-basis.de>

	* call.h, call.c : New functions cob_resolve_1
			   cob_call_resolve_1.
			   These are wrappers for optimized dynamic
			   calls.

2005-05-21  Roger While <simrw@sim-basis.de>

	* call.h, call.c : Cater for call.def
			   Cater for --with-dl
			   Restructure code slightly
			   Take out check for cob_initialized

2005-05-03  Roger While <simrw@sim-basis.de>

	* Mak* :      Due to autoreconf
	  common.c :  Slight restructure.
		      cob_exp10 must be int not long.
	  common.h :  extern definitions. 
	  fileio.c :  Force SORT to put duplicates in order.
	  move.c :    Performance.
	  numeric.c : Remove unused function.
		      Change long to int (64-bitters where long = 8 bytes).

2005-04-15  Keisuke Nishida  <knishida@open-cobol.org>

	* Makefile.am (libcob_la_CFLAGS): Add -fsigned-char.

2005-04-13  Keisuke Nishida  <knishida@open-cobol.org>

	* byteswap.h: #include <sys/types.h>.  Use u_int16_t, u_int32_t, and
	u_int64_t instead of unsigned short, etc.

2005-03-03  Roger While <simrw@sim-basis.de>

	* fileio.h, fileio.c :
	  LINAGE

2005-02-11  Roger While <simrw@sim-basis.de>

	* common.h, common.c, termio.c :
	  Reorder struct cob_module.
	  Fixes for ARGUMENT-VALUE/NUMBER -
	  discovered by Franklin Ankum.
	  Fix possible too small buffer.

2005-02-09  Roger While <simrw@sim-basis.de>

	* I must be going senile. Finally fix
	  cob_external_addr.

2005-02-08  Roger While <simrw@sim-basis.de>

	* Fix my cob_external_addr routine

2005-02-07  Roger While <simrw@sim-basis.de>

	* common.h, common.c : new routine cob_external_addr
	  Dynamically cater for EXTERNAL items at runtime

2005-02-04  Roger While <simrw@sim-basis.de>

	* termio.h, termio.c :
	  implement DISPLAY .. UPON ENVIRONMENT-VALUE
	  implement DISPLAY .. UPON ARGUMENT-NUMBER
	  implement ACCEPT .. FROM ARGUMENT-NUMBER
	  implement ACCEPT .. FROM ARGUMENT-VALUE

2005-01-07  Roger While <simrw@sim-basis.de>
